fix: search by date only but still record time of workouts